# rust-kafka-apps

./: Cargo.toml  README.md
rust_kafka_consumer/: .dockerignore  .env  Cargo.toml
rust_kafka_consumer/src/: config.rs  consumer.rs  main.rs
rust_kafka_producer/: .env  Cargo.toml  README.md
rust_kafka_producer/src/: config.rs  error.rs  handler.rs  kafka_producer.rs  main.rs  models.rs
