[package]
name = "rust_kafka_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] } 
axum = "0.8.3"
tracing = "0.1.40" # Logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } 
rdkafka = { version = "0.37", features = ["cmake-build"] } 
serde_json = "1.0.128" # Manejo de JSON
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.89"
dotenv = "0.15"
config = "0.15.10"
thiserror = "2.0.11" # Error Handlers
