[package]
name = "kafka_service"
version = "0.1.0"
edition = "2021"
authors = ["Victor Aguayo"]
description = "Kafka Producer Service"

[dependencies]
axum =  "0.8.3"# Web server
tokio = { version = "1.40.0", features = ["full"] } 
rdkafka = { version = "0.37", features = ["cmake-build"] } # Kafka Client
serde = { version = "1.0.210", features = ["derive"] } 
serde_json = "1.0.128" # Manejo de JSON
tracing = "0.1.40" # Logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } 
thiserror = "2.0.11" # Error Handlers
config = "0.15.10" 
anyhow = "1.0.89" 
dotenv = "0.15"

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] } 
tokio-test = "0.4" # Testeo asíncrono
